content/terraform-enterprise/1.1.x/docs/enterprise/users-teams-organizations/organizations/index.mdx
---
page_title: Organizations overview
description: >-
  Organizations are groups of projects and workspaces that let teams
  collaborate. Learn how to create and manage Terraform Enterprise
  organizations.
source: terraform-docs-common
---

[teams]: /terraform/enterprise/users-teams-organizations/teams

[users]: /terraform/enterprise/users-teams-organizations/users

[owners]: /terraform/enterprise/users-teams-organizations/teams#the-owners-team

# Organizations overview

This topic provides overview information about how to create and manage organizations in HCP Terraform and Terraform Enterprise. An organization contains one or more projects.

## Requirements

You must have **Admin** level-permissions to manage organizations in the HCP Terraform UI. Refer to [Permissions](/terraform/enterprise/users-teams-organizations/permissions/organization#organization-owners) to learn more.

## API and Terraform Enterprise Provider

In addition to the HCP Terraform UI, you can use the following methods to manage organizations:

-   [Organizations API](/terraform/enterprise/api-docs/organizations)
-   The `tfe` provider [`tfe_organization`](https://registry.terraform.io/providers/hashicorp/tfe/latest/docs/resources/organization) resource

## Select an organization

HCP Terraform displays your current organization in the sidebar. To select an organization:

1.  Sign in to [HCP Terraform](https://app.terraform.io/) or Terraform Enterprise.
2.  Click the current organization name to view a list of all the organizations where you are a member.
3.  Click an organization to select it. HCP Terraform displays list of workspaces<!-- BEGIN: TFC:only name:stacks-tfe --> and Stacks<!-- END: TFC:only name:stacks-tfe --> within that organization.

## Join an organization

<!-- BEGIN: TFC:only name:hcp-eu -->

<Note>

@include 'eu/group.mdx'

</Note>

<!-- END: TFC:only name:hcp-eu -->

To join an organization, the organization [owners][] or a user with specific [team management](/terraform/enterprise/users-teams-organizations/permissions/organization#team-management-permissions) permissions must invite you, and you must accept the emailed invitation. [Learn more](#users).

[permissions-citation]: #intentionally-unused---keep-for-maintainers

## Leave an organization

<!-- BEGIN: TFC:only name:hcp-eu -->

<Note>

[Contact HCP support](/hcp/docs/hcp/admin/support) to leave an HCP Europe organization. To learn more, refer to [Use HCP Terraform in Europe](/terraform/enterprise/europe).

</Note>

<!-- END: TFC:only name:hcp-eu -->

1.  Sign in to [HCP Terraform](https://app.terraform.io/) or Terraform Enterprise and click the Terraform logo in the page header to navigate to the **Organizations** page.
2.  Open the **...** ellipses menu next to the organization and select **Leave organization**.

You do not need permission from the owners to leave an organization, but you cannot leave if you are the last member of the owners team. Either add a new owner and then leave, or [delete the organization](/terraform/enterprise/users-teams-organizations/organizations#general).

## Create an organization

<!-- BEGIN: TFC:only name:hcp-eu -->

<Note>

@include 'eu/organization.mdx'

</Note>

<!-- END: TFC:only name:hcp-eu -->

On HCP Terraform, any user can create a new organization.

If you do not belong to any organizations, HCP Terraform prompts you to create one the first time you [sign in](https://app.terraform.io/). To create an organization:

1.  Click the current organization name and select **Create new organization**. The **Create a new organization** page appears.
2.  Enter a unique **Organization name** Organization names can include numbers, letters, underscores (`_`), and hyphens (`-`).
3.  Provide an **Email address** to receive notifications about the organization.
4.  Click **Create organization**.

HCP Terraform shows the new organization and prompts you to create a new workspace. You can also [invite other users](#users) to join the organization.

<EnterpriseAlert>

On Terraform Enterprise, administrators can restrict your ability to create organizations. Refer to [Organization Creation](/terraform/enterprise/admin/application/general#organization-creation) for details.

</EnterpriseAlert>

<!-- BEGIN: TFC:only name:managed-resources -->

## Managed resources

Your organization’s managed resource count helps you understand the number of infrastructure resources that HCP Terraform manages across all your workspaces and Stacks.

HCP Terraform reads all the workspace and Stack deployment state files to determine the total number of managed resources. Each [resource](/terraform/language/resources/syntax) instance in the state equals one managed resource. HCP Terraform includes resources in modules and each resource created with the `count` or `for_each` meta-arguments. HCP Terraform does not include [data sources](/terraform/language/data-sources) in the count. Refer to [Managed Resources Count](/terraform/enterprise/workspaces/state#managed-resources-count) in the workspace state documentation for more details.

You can view your organization's managed resource count on the **Usage** page.

<!-- END: TFC:only name:managed-resources -->

## Create and manage reserved tag keys

~> **Reserved tag keys are in beta**: We do not recommend using beta features in production environments.

You can define reserved tag keys that appear as suggested labels when managers want to add tags to their projects and workspaces in the organization. Refer to [Create and manage reserved tag keys](/terraform/enterprise/users-teams-organizations/organizations/manage-reserved-tags) for instructions.

You can also view single-value tags that may already be attached to projects and workspaces. Refer to [Tags](#tags) in the organization settings reference for additional information.

## Managing settings

<!-- BEGIN: TFC:only name:hcp-eu -->

<Note>

@include 'eu/organization.mdx'

</Note>

<!-- END: TFC:only name:hcp-eu -->

To view and manage an organization's settings, click **Settings**.

The contents of the organization settings depends on your permissions within the organization. All users can review the organization's contact email, view the membership of any teams they belong to, and view the organization's authentication policy. [Organization owners][owners] can view and manage the entire list of organization settings. Refer to [Organization Permissions](/terraform/enterprise/users-teams-organizations/permissions/organization) for details.

You may be able to manage the following organization settings.

[permissions-citation]: #intentionally-unused---keep-for-maintainers

### Organization settings

#### General

Review the organization name and contact email. Organization owners can choose to change the organization name, contact email, and the default execution mode, or delete the organization. When an organization owner updates the default execution mode, all workspaces configured to [inherit this value](/terraform/enterprise/workspaces/settings#execution-mode) will be affected.

Organization owners can also choose whether [workspace administrators](/terraform/enterprise/users-teams-organizations/permissions/workspace#workspace-admin) can delete workspaces that are managing resources. Deleting a workspace with resources under management introduces risk because Terraform can no longer track or manage the infrastructure. The workspace's users must manually delete any remaining resources or [import](/terraform/cli/commands/import) them into another Terraform workspace.

<!-- BEGIN: TFC:only name:generated-tests -->

Organization owners using HCP Terraform Standard edition can choose whether members with [module management permissions](/terraform/enterprise/users-teams-organizations/permissions/organization#manage-private-registry) can [generate module tests](/terraform/enterprise/registry/test#generated-module-tests).

<!-- END: TFC:only name:generated-tests -->

##### Renaming an organization

!> **Warning:** Deleting or renaming an organization can be very disruptive. We strongly recommend against deleting or renaming organizations with active members.

To rename an organization that manages infrastructure:

1.  Alert all members of the organization about the name change.
2.  Sign in to [HCP Terraform](https://app.terraform.io/) or Terraform Enterprise and navigate to the organization you want to rename.
3.  Cancel in progress and pending runs or wait for them to finish. HCP Terraform cannot change the name of an organization with runs in progress.
4.  Lock all workspaces to ensure that no new runs will start before you change the name.
5.  Rename the organization.
6.  Update all components using the HCP Terraform API to the new organization name. This includes Terraform's `cloud` block CLI integration, the `tfe` Terraform provider, and any external API integrations.
7.  Unlock workspaces and resume normal operations.

<!-- BEGIN: TFC:only name:hcp-eu -->

<Note>

@include 'eu/organization.mdx'

</Note>

<!-- END: TFC:only name:hcp-eu -->

#### Plan & Billing

<!-- BEGIN: TFC:only name:hcp-eu -->

<Note>

@include 'eu/billing.mdx'

</Note>

<!-- END: TFC:only name:hcp-eu -->

Review the organization's plan and any invoices for previous plan payments. Organization owners can also upgrade to one of HCP Terraform's paid plans, downgrade to a free plan, or begin a free trial of paid features.

#### Tags

Click the **Tags** tab in the **Tags Management** screen to view single-value tags that may have already been created in your system. The table on lists the tags in the system, the number of times a tag appears in a project or workspace, and the date the tag was created.

The only action you can perform in the UI is deleting single-value tags from the system. You can use the following methods to delete single-value tags:

1.  Select one or more tags and click **Delete tags**.
2.  Select the **Name** header to select all tags, then click **Delete tags**.
3.  Click the trash icon for a tag and confirm that you want to permanently delete it when prompted.

#### Teams

<!-- BEGIN: TFC:only name:pnp-callout -->

@include 'tfc-package-callouts/team-management.mdx'

<!-- END: TFC:only name:pnp-callout -->

All users in an organization can access the **Teams** page, which displays a list of [teams][] within the organization.

Organization owners and users with the [include secret teams permission](/terraform/enterprise/users-teams-organizations/permissions/organization#include-secret-teams) can:

-   view all [secret teams](/terraform/enterprise/users-teams-organizations/teams/manage#team-visibility)
-   view each team's membership
-   manage team API tokens

HCP Terraform restricts team creation, team deletion, and management of team API tokens to organization owners and users with the [manage teams](/terraform/enterprise/users-teams-organizations/permissions/organization#manage-teams) permission. Organization owners and users with the [manage membership](/terraform/enterprise/users-teams-organizations/permissions/organization#manage-membership) permission can manage team membership. Remember that users must accept their organization invitations before you can add them to a team.

<!-- BEGIN: TFC:only name:hcp-eu -->

<Note>

@include 'eu/group.mdx'

</Note>

<!-- END: TFC:only name:hcp-eu -->

[permissions-citation]: #intentionally-unused---keep-for-maintainers

#### Users

Organization owners and users with [manage membership](/terraform/enterprise/users-teams-organizations/permissions/organization#manage-membership) permissions can invite HCP Terraform users into the organization, cancel invitations, and remove existing members.

The list of users is separated into one tab for active users and one tab for invited users who have not yet accepted their invitations. For active users, the list includes usernames, email addresses, avatar icons, two-factor authentication status, and current team memberships. Use the **Search by username or email** field to filter these lists.

User invitations are always sent by email; you cannot invite someone using their HCP Terraform username. To invite a user to an organization:

1.  Click **Invite a user**. The **invite a user** box appears.
2.  Enter the user's email address and optionally add them to one or more teams. If the user accepts the invitation, HCP Terraform automatically adds them to the specified teams.

All permissions in HCP Terraform are managed through teams. Users can join an organization without belonging to any teams, but they cannot use HCP Terraform features until they belong to a team. Refer to [permissions](/terraform/enterprise/users-teams-organizations/permissions) for details.

<!-- BEGIN: TFC:only name:hcp-eu -->

<Note>

@include 'eu/group.mdx'

</Note>

<!-- END: TFC:only name:hcp-eu -->

[permissions-citation]: #intentionally-unused---keep-for-maintainers

#### Variable Sets

View all of the available variable sets and their variables. Users with [**Manage variable set** permissions](/terraform/enterprise/variables/managing-variables#variable-sets) can create variable sets and assign them to one or more projects or workspaces.<!-- BEGIN: TFC:only name:stacks-tfe -->Assigning a variable set to project gives lets your Stacks within that project access that variable set.<!-- END: TFC:only name:stacks-tfe -->

Variable sets let you reuse the same variables across multiple workspaces or projects in an organization. For example, you could define a variable set of provider credentials and automatically apply it to several projects or workspaces, rather than manually defining credential variables in each. Changes to variable sets instantly apply to all appropriate workspaces, saving time and reducing errors from manual updates.

Refer to the [variables overview](/terraform/enterprise/variables) documentation for details about variable types, scope, and precedence. Refer to [managing variables](/terraform/enterprise/variables/managing-variables) for details about how to create and manage variable sets.

#### Health

<!-- BEGIN: TFC:only name:pnp-callout -->

@include 'tfc-package-callouts/health-assessments.mdx'

<!-- END: TFC:only name:pnp-callout -->

HCP Terraform can perform automatic health assessments in a workspace to assess whether its real infrastructure matches the requirements defined in its Terraform configuration. Health assessments include the following types of evaluations:

-   Drift detection determines whether your real-world infrastructure matches your Terraform configuration. Drift detection requires Terraform version 0.15.4+.
-   Continuous validation determines whether custom conditions in the workspace’s configuration continue to pass after Terraform provisions the infrastructure. Continuous validation requires Terraform version 1.3.0+.

You can enforce health assessments for all eligible workspaces or let each workspace opt in to health assessments through workspace settings. Refer to [Health](/terraform/enterprise/workspaces/health) in the workspaces documentation for more details.

#### Runs

From the Workspaces page, click **Settings** in the sidebar, then **Runs** to view all of the current runs in your organization's workspaces. The **Runs** page displays:

-   The name of the run
-   The run's ID
-   What triggered the run
-   The workspace and project where the run is taking place
-   When the latest change in the run occurred
-   A button allowing you to cancel that run

You can apply the following filters to limit the runs HCP Terraform displays:

-   Click **Needs Attention** to display runs that require user input to continue, such as approving a plan or overriding a policy.
-   Click **Running** to display runs that are in progress.
-   Click **On Hold** to display paused runs.

For precise filtering, click **More filters** and check the boxes to filter runs by specific [run statuses](/terraform/enterprise/workspaces/run/states), [run operations](/terraform/enterprise/workspaces/run/modes-and-options), workspaces, or [agent pools](/terraform/cloud-docs/agents/agent-pools). Click **Apply filters** to list the runs that match your criteria.

You can dismiss any of your filtering criteria by clicking the **X** next to the filter name above the table displaying your runs. For more details about workspace run states, refer to [Run States and Stages](/terraform/enterprise/workspaces/run/states).

<!-- BEGIN: TFC:only name:stacks-tfe -->

To learn how to view Stack deployment runs, refer to [Review deployment runs](/terraform/enterprise/stacks/deploy/runs).

<!-- END: TFC:only name:stacks-tfe -->

### Integrations

#### Cost Estimation

Enable and disable the [cost estimation](/terraform/enterprise/cost-estimation) feature for all workspaces.

#### Policies

<!-- BEGIN: TFC:only name:pnp-callout -->

@include 'tfc-package-callouts/policies.mdx'

<!-- END: TFC:only name:pnp-callout -->

Policies let you define and enforce rules for runs in workspaces.<!-- BEGIN: TFC:only name:stacks-tfe -->Stacks do not support executing policies.<!-- END: TFC:only name:stacks-tfe --> You can write them using either the [Sentinel](/terraform/enterprise/policy-enforcement/define-policies/custom-sentinel) or [Open Policy Agent (OPA)](/terraform/enterprise/policy-enforcement/opa) policy-as-code frameworks and then group them into policy sets that you can apply to workspaces in your organization. To create policies and policy sets, you must have [permission to manage policies](/terraform/enterprise/users-teams-organizations/permissions#organization-permissions).

#### Policy Sets

<!-- BEGIN: TFC:only name:pnp-callout -->

@include 'tfc-package-callouts/policies.mdx'

<!-- END: TFC:only name:pnp-callout -->

Create groups of policies and enforce those policy sets globally or on specific [projects](/terraform/enterprise/projects/manage) and workspaces.<!-- BEGIN: TFC:only name:stacks-tfe -->Stacks do not support executing policies.<!-- END: TFC:only name:stacks-tfe --> You can create policy sets through the Terraform API, by connecting a VCS repository containing policies, or directly in HCP Terraform. To create policies and policy sets, you must have [permission to manage policies](/terraform/enterprise/users-teams-organizations/permissions#organization-permissions).

Refer to [Managing Policy Sets](/terraform/enterprise/policy-enforcement/manage-policy-sets) for details.

[permissions-citation]: #intentionally-unused---keep-for-maintainers

#### Run Tasks

<!-- BEGIN: TFC:only name:pnp-callout -->

@include 'tfc-package-callouts/run-tasks.mdx'

<!-- END: TFC:only name:pnp-callout -->

Manage the run tasks that you can add to workspaces within the organization. [Run tasks](/terraform/enterprise/workspaces/settings/run-tasks) let you integrate third-party tools and services at specific stages in the HCP Terraform run lifecycle.

### Security

#### Agents

<!-- BEGIN: TFC:only name:pnp-callout -->

@include 'tfc-package-callouts/agents.mdx'

<!-- END: TFC:only name:pnp-callout -->

Create and manage [HCP Terraform agent pools](/terraform/cloud-docs/agents). HCP Terraform agents let HCP Terraform communicate with isolated, private, or on-premises infrastructure. This is useful for on-premises infrastructure types such as vSphere, Nutanix, OpenStack, enterprise networking providers, and infrastructure within a protected enclave.

#### API Tokens

Organization owners can set up a special [Organization API Token](/terraform/enterprise/users-teams-organizations/api-tokens) that is not associated with a specific user or team.

#### Authentication

<!-- BEGIN: TFC:only name:hcp-eu -->

<Note>

@include 'eu/2fa.mdx'

</Note>

<!-- END: TFC:only name:hcp-eu -->

Organization owners can determine when users must reauthenticate and require [two-factor authentication](/terraform/enterprise/users-teams-organizations/2fa) for all members of the organization.

#### SSH Keys

Manage [SSH keys for cloning Git-based modules](/terraform/enterprise/workspaces/settings/ssh-keys) during workspace runs. This does not include keys to access a connected VCS provider.

#### SSO

<!-- BEGIN: TFC:only name:hcp-eu -->

<Note>

@include 'eu/sso.mdx'

</Note>

<!-- END: TFC:only name:hcp-eu -->

Organization owners can set up an SSO provider for the organization.

### Version Control

#### VCS General

Configure [Automatically cancel plan-only runs triggered by outdated commits](/terraform/enterprise/users-teams-organizations/organizations/vcs-speculative-plan-management) to manage the setting.

#### VCS Events

-> **Note:** This feature is in beta.

Review the event logs for GitLab.com connections.

#### VCS Providers

Configure [VCS providers](/terraform/enterprise/vcs) to use in the organization. You must have [permission to manage VCS settings](/terraform/enterprise/users-teams-organizations/permissions).

[permissions-citation]: #intentionally-unused---keep-for-maintainers

### Destruction and Deletion

#### Data Retention Policies

<EnterpriseAlert>
Data retention policies are exclusive to Terraform Enterprise, and not available in HCP Terraform. <a href="https://developer.hashicorp.com/terraform/enterprise">Learn more about Terraform Enterprise</a>.
</EnterpriseAlert>

An organization owner can set or override the following data retention policies:

-   **Admin default policy**
-   **Do not auto-delete**
-   **Auto-delete data**

Setting the data retention policy to **Admin default policy** disables the other data retention policy settings.

By default, the **Do not auto-delete** option is enabled for an organization. This option directs Terraform Enterprise to retain data associated with configuration and state versions, but organization owners can define configurable data retention policies that allow Terraform to _soft delete_ the backing data associated with configuration versions and state versions. Soft deleting refers to marking a data object for garbage collection so that Terraform can delete the object after a set number of days.

Once an object is soft deleted, any attempts to read the object will fail. Until the garbage collection process begins, you can restore soft deleted objects using the APIs described in the [configuration version documentation](/terraform/enterprise/api-docs/configuration-versions) and the [state version documentation](/terraform/enterprise/api-docs/state-versions). Terraform permanently deletes the archivist storage after the garbage collection grace period elapses.

The organization policy is the default policy applied to all workspaces, but members of individual workspaces can set overriding policies for their workspaces that take precedence over the organization policy.

## Trial Expired Organizations

HCP Terraform paid features are available as a free trial. When a free trial has expired, the organization displays a banner reading **TRIAL EXPIRED — Upgrade Required**.

Organizations with expired trials return to the feature set of a free organization, but they retain any data created as part of paid features. Specifically, HCP Terraform disables the following features:

-   Teams other than `owners` and locks users who do not belong to the `owners` team out of the organization. HCP Terraform preserves team membership and permissions and re-enables them after you upgrade the organization.
-   Sentinel policy checks. HCP Terraform preserves existing policies and policy sets and re-enables them after you upgrade the organization.
-   Cost estimation.
